<resources>
    <string name="app_name">EVA</string>
    <string name="title_setup">To predict period accurately, if would be better if you answer 3 questions.</string>
    <string name="know">I don\'t know</string>
    <string name="detail_setup_period">On average, how long is your period?</string>
    <string name="detail_setup_cycle">On average, how long is your cycle?</string>
    <string name="detail_setup_calendar">When did your last period start?</string>
    <string name="guess">Prediction</string>
    <string name="finish">Finish</string>
    <string name="period">Period</string>
    <string name="Fertility">Fertility</string>
    <string name="ovulation">Ovulation</string>
    <string name="menu_period">Period Length</string>
    <string name="menu_cycle">Cycle Length</string>
    <string name="menu_remind">Reminders</string>
    <string name="menu_setting">Settings</string>
    <string name="home">Home</string>
    <string name="calendar">Records</string>
    <string name="chart">Report</string>
    <string name="more">More</string>

    <string name="start_period_title">Period Starts</string>
    <string name="daily_title">Daily Reminder</string>
    <string name="daily_remind_content">Don\'t forget to monitor your health every day!</string>
    <string name="end_period_title">Period Ends</string>
    <string name="start_fertility_title">Fertility Starts</string>
    <string name="end_fertility_title">Fertility Ends</string>
    <string name="medicine_title">Take Pill</string>
<!--    <string name="start_period_content">Your period is expected to start in 2 days.</string>-->
<!--    <string name="end_period_content">Don\'t forget to record the end of your period.</string>-->
<!--    <string name="start_fertility_content">Fertility is expected to start in 1 day.</string>-->
<!--    <string name="end_fertility_content">Fertility is expected to start in 1 day.</string>-->
    <string name="medicine_content">Don\'t forget to take pills</string>
    <string name="periodic_remind">Cycle Reminders</string>
    <string name="custom_remind">Custom Reminder</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">English</string>
    <string name="medicine_number">Number of your daily intakes</string>
    <string name="time">Time</string>
    <string name="medicine_remind_one">Reminder 1</string>
    <string name="medicine_remind_two">Reminder 2</string>
    <string name="medicine_remind_three">Reminder 3</string>
    <string name="medicine_time_one">08:00</string>
    <string name="medicine_time_two">12:30</string>
    <string name="medicine_time_three">18:30</string>
    <string name="medicine_message">Message</string>
    <string name="medicine_message_detail">Don\'t forget to take pills.</string>
    <string name="medicine_description">Select the number of your daily intakes, PinkBird will send you a reminder for each intakes. </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
<!--    <string name="remind_message">Kỳ hành kinh dự tính của bạn sẽ bắt đầu </string>-->
    <string name="remind_message_begin_period">Your period is expected to start in 2 days. </string>
    <string name="remind_message_end_period">Don\'t forget to record the end of your period. </string>
    <string name="remind_message_begin_fertility">Fertility is expected to start in 1 day. </string>
    <string name="remind_message_end_fertility">Fertility is expected to end in 1 day.</string>
    <string name="remind_message_ovulation">Ovulation is expected to start in 1 day. </string>
    <string name="follow_health">Health Monitoring </string>

    <string name="sex">Sex</string>
    <string name="nope">Nope</string>
    <string name="protect">Protected</string>
    <string name="unprotected">UnProtected</string>

    <string name="vaginal_discharge"> Vaginal Discharge</string>
    <string name="no_discharge"> No Discharge</string>
    <string name="spotting">Spotting</string>
    <string name="sticky">Sticky</string>
    <string name="watery">Watery</string>
    <string name="eggWhite">Eggwhite</string>
    <string name="unusual">Unusual</string>

    <string name="mood">Mood</string>
    <string name="menstruation">Menstruation</string>
    <string name="medicine">Medicine</string>
    <string name="sporty">Physical Activities</string>
    <string name="symptom">Symptoms</string>
    <string name="healthy">Health</string>
    <string name="note">Notes</string>

    <string name="menstruation_light">Light</string>
    <string name="menstruation_medium">Medium</string>
    <string name="menstruation_heavy">Heavy</string>
    <string name="mood_normal">Normal</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_tired">Tired</string>
    <string name="mood_worry">Worry</string>
    <string name="mood_fear">Fear</string>
    <string name="symptom_headache">Headache</string>
    <string name="symptom_good">Good</string>
    <string name="symptom_acne">Acne</string>
    <string name="symptom_dizziness">Dizziness</string>
    <string name="symptom_bloating">Bloating</string>
    <string name="symptom_stomachache">Stomachache</string>
    <string name="symptom_nausea">Nausea</string>
    <string name="symptom_backache">Backache</string>
    <string name="symptom_breast_pain">Breast pain</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="no_sporty">Didn\'t exercise</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="gym">Gym</string>
    <string name="earobics">Aerobics</string>
    <string name="swimming">Swimming</string>
    <string name="chanel_name">EVA</string>
    <string name="chanel_description">EVA</string>
    <string name="edit_cycle_period">Edit Cycle</string>
    <string name="not_select_date">You have not selected a date.</string>
    <string name="not_select_begin_date">You have not selected a start date.</string>
    //home
    <string name="day"> Day </string>
    <string name="days"> days</string>
    <string name="home_end_period_in">Period will end: </string>
    <string name="window_fertility_in">Fertility Window in</string>
    <string name="home_normal">Low chance of getting pregnant</string>
    <string name="window_fertility">Fertility Window</string>
    <string name="home_begin_fertility">High chance of getting pregnant > 10%</string>
    <string name="home_ovulation">High chance of getting pregnant 22%</string>
    <string name="home_period_in">Period in</string>
    <string name="late">Late</string>
    //detail
    <string name="detail_start_day">Start day</string>
    <string name="detail_end_day">End day</string>
    <string name="detail_period">Period Length</string>
    <string name="detail_normal">Low chance of getting pregnant</string>
    <string name="detail_fertility">High chance of getting pregnant</string>
    <string name="detail_ovulation">Ovulation Day</string>
    <string name="detail_period_guess">Estimated period time</string>
    <string name="hint_note">Write your notes here</string>

    //Char
    <string name="chart_stable">Stable</string>
    <string name="chart_early">early</string>
    <string name="chart_late">late</string>

    <string name="recent_period">Recent period:</string>
    <string name="ending_late">ending late</string>
    <string name="ending_early">ending early</string>

    <string-array name="custom_months_demo">
        <item>JAN -</item>
        <item>Feb -</item>
        <item>MARCH -</item>
        <item>April -</item>
        <item>MAY -</item>
        <item>June -</item>
        <item>JULY -</item>
        <item>Aug -</item>
        <item>SEPT -</item>
        <item>Oct -</item>
        <item>Nov -</item>
        <item>DEC -</item>
    </string-array>

    <string name="banner_ad_home_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="native_ad">ca-app-pub-3940256099942544/2247696110</string>
    <string name="step_1">Choose the start date of your period in the calendar.</string>
    <string name="step_2">Choose the end date of your period in the calendar (if needed).</string>
    <string name="step_3">Save</string>
    <string name="water_monitor">Track the amount of water you drink</string>
    <string name="menstrual_cycle">Menstrual Cycle</string>'

</resources>