<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MedicineRemindActivity"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_number_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:text="@string/medicine_number"
            android:gravity="center_vertical"
            style="@style/TextListTitle"/>

        <ImageView
            android:id="@+id/image_minus_remind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/text_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="3"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPinkText" />
        <ImageView
            android:id="@+id/image_plus_remind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_medicine_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_description"
        android:layout_below="@id/layout_number_medicine"
        android:layout_margin="10dp"/>

    <View
        android:id="@+id/view_linear1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginVertical="12dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/text_medicine_description"/>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_below="@id/view_linear1"
        android:textColor="@color/colorTextBlack"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/layout_remind_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_time"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/text_remind_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicine_remind_one"
            style="@style/TextListTitle"/>

        <TextView
            android:id="@+id/text_time_medicine1"
            style="@style/TextNumberPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/medicine_time_one" />

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/layout_time_picker_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_remind_one"/>
    <View
        android:id="@+id/view_linear2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/layout_time_picker_one"/>


    <RelativeLayout
        android:id="@+id/layout_remind_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_linear2"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/text_remind_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicine_remind_two"
            style="@style/TextListTitle"/>

        <TextView
            android:id="@+id/text_time_medicine2"
            style="@style/TextNumberPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/medicine_time_two" />
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/layout_time_picker_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_remind_two"/>
    <View
        android:id="@+id/view_linear3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/layout_time_picker_two"/>
    <RelativeLayout
        android:id="@+id/layout_remind_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_linear3"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/text_remind_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicine_remind_three"
            style="@style/TextListTitle"/>
        <TextView
            android:id="@+id/text_time_medicine3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/medicine_time_three"
            style="@style/TextNumberPink"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_time_picker_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_remind_three"/>
    <View
        android:id="@+id/view_linear4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/layout_time_picker_three"/>
    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_message"
        android:layout_below="@id/view_linear4"
        android:textColor="@color/colorTextBlack"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"/>
    <EditText
        android:layout_marginLeft="5dp"
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_message"
        android:text="@string/medicine_message_detail"
        style="@style/TextPink"/>
    </RelativeLayout>
</ScrollView>