<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PeriodicRemindActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/text_time_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextSubTitle"
        android:text="@string/time"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/text_time_periodic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/medicine_time_one"
        android:layout_marginTop="10dp"
        style="@style/TextNumberPink"/>
    <FrameLayout
        android:id="@+id/layout_time_picker_periodic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_time_title"/>
    <View
        android:id="@+id/view_linear1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginVertical="12dp"
        android:background="@color/colorLine"
        android:layout_below="@+id/layout_time_picker_periodic"/>

    <TextView
        android:id="@+id/text_message_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_message"
        android:layout_below="@id/view_linear1"
        android:textColor="@color/colorTextBlack"
        style="@style/TextSubTitle" />
    <EditText
        android:layout_marginLeft="5dp"
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_message_remind"
        android:text="@string/remind_message"
        style="@style/TextPink"/>

</RelativeLayout>