<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_note_1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:id="@+id/image_guess"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ellipse_guess"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/guess"/>

        <ImageView
            android:id="@+id/image_period"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ellipse__period"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/period"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_note_2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linear_note_1"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/image_pregnant"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ellipse__pregnant"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/period"/>
        <ImageView
            android:id="@+id/image_ovulation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_ovulation"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/ovulation"/>
    </LinearLayout>
    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_below="@id/linear_note_2"
        android:id="@+id/material_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="@color/colorPinkButton"
        android:layout_margin="10dp"
        app:mcv_arrowColor="@color/colorPinkButton"
        />

</RelativeLayout>